# npm-shield

./: README.md  pyproject.toml
npm_shield/: __init__.py  detectors.py  patterns.py
tests/: __init__.py  test_detectors.py  test_patterns.py  test_reporter.py  test_scanner.py
tests/fixtures/fake_project/: package.json
