[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npm_shield"
version = "0.1.0"
description = "A CLI security tool that scans Node.js project dependencies for supply chain attack indicators."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "npm_shield contributors" }
]
keywords = ["security", "npm", "supply-chain", "cli", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
]

[project.scripts]
npm-shield = "npm_shield.cli:main"

[project.urls]
Homepage = "https://github.com/example/npm_shield"
Issues = "https://github.com/example/npm_shield/issues"

[tool.hatch.build.targets.wheel]
packages = ["npm_shield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
